2011-05-03  Ryosuke Niwa  <rniwa@webkit.org>

Reviewed by Darin Adler.

        WebKit allows selection that crosses the shadow boundary of a readonly input element
        https://bugs.webkit.org/show_bug.cgi?id=60000

        Added pixel tests to ensure WebKit doesn't create a selection that spans across
        the shadow DOM boundary of a readonly input element. Also rebaselined a test that
        previously exhibited this behavior.

        * editing/selection/resources/select-across-readonly-input.js: Added.
        (moveMouseToMiddleOfElement):
        * editing/selection/select-across-readonly-input-1.html: Added.
        * editing/selection/select-across-readonly-input-2.html: Added.
        * editing/selection/select-across-readonly-input-3.html: Added.
        * editing/selection/select-across-readonly-input-4.html: Added.
        * editing/selection/select-across-readonly-input-5.html: Added.
        * platform/mac/editing/selection/select-across-readonly-input-1-expected.png: Added.
        * platform/mac/editing/selection/select-across-readonly-input-1-expected.txt: Added.
        * platform/mac/editing/selection/select-across-readonly-input-2-expected.png: Added.
        * platform/mac/editing/selection/select-across-readonly-input-2-expected.txt: Added.
        * platform/mac/editing/selection/select-across-readonly-input-3-expected.png: Added.
        * platform/mac/editing/selection/select-across-readonly-input-3-expected.txt: Added.
        * platform/mac/editing/selection/select-across-readonly-input-4-expected.png: Added.
        * platform/mac/editing/selection/select-across-readonly-input-4-expected.txt: Added.
        * platform/mac/editing/selection/select-across-readonly-input-5-expected.png: Added.
        * platform/mac/editing/selection/select-across-readonly-input-5-expected.txt: Added.
        * platform/mac/fast/forms/input-readonly-autoscroll-expected.txt:
2011-05-03  Ryosuke Niwa  <rniwa@webkit.org>

        Reviewed by Darin Adler.

        WebKit allows selection that crosses the shadow boundary of a readonly input element
        https://bugs.webkit.org/show_bug.cgi?id=60000

        The bug was caused by VisibleSelection's not validating shadow DOM boundaries.
        Fixed the bug by adding an extra adjustment, adjustSelectionToAvoidCrossingShadowBoundaries,
        in its validation process.

        Tests: editing/selection/select-across-readonly-input-1.html
               editing/selection/select-across-readonly-input-2.html
               editing/selection/select-across-readonly-input-3.html
               editing/selection/select-across-readonly-input-4.html
               editing/selection/select-across-readonly-input-5.html

        * editing/VisibleSelection.cpp:
        (WebCore::VisibleSelection::validate): Calls adjustSelectionToAvoidCrossingShadowBoundaries.
        (WebCore::VisibleSelection::adjustSelectionToAvoidCrossingShadowBoundaries): Added.
        * editing/VisibleSelection.h:

Canonical link: https://commits.webkit.org/75356@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@85669 268f45cc-cd09-0410-ab3c-d52691b4dbfc